# Inventory-management

./: .gitignore  README.md
backend/: .env.example  manage.py  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/core/: __init__.py  admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/inventory_management/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: architecture.md  roadmap.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/reservations/: page.tsx
frontend/components/: app-shell.tsx  data-table.tsx  metric-card.tsx  section-card.tsx
frontend/lib/: mock-data.ts  navigation.ts
tests/: README.md
