[project]
name = "inventory-management-backend"
version = "0.1.0"
description = "Inventory management and checkout platform scaffold"
requires-python = ">=3.12,<4.0"
dependencies = [
  "Django>=4.2.0,<5.0.0",
  "djangorestframework>=3.15.0,<4.0.0",
  "djangorestframework-simplejwt>=5.3.1,<6.0.0",
  "drf-spectacular>=0.27.0,<0.29.0",
  "django-cors-headers>=4.3.0,<5.0.0",
  "django-redis>=5.4.0,<6.0.0",
  "redis>=5.0.0,<6.0.0",
  "celery>=5.4.0,<6.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "gunicorn>=21.2.0,<22.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
